[gd_scene load_steps=8 format=3 uid="uid://b214l8eg7ep77"]

[ext_resource type="Texture2D" uid="uid://bk7rx8aqcclua" path="res://assets/Tiny Town/Tiles/tile_0083.png" id="1_22nhh"]
[ext_resource type="Script" path="res://sign.gd" id="1_513hb"]
[ext_resource type="FontFile" uid="uid://c3aghilr8sdde" path="res://assets/Rubik font/static/Rubik-Regular.ttf" id="3_ml03n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nrn8e"]
size = Vector2(14, 11)

[sub_resource type="CircleShape2D" id="CircleShape2D_7cbp0"]
radius = 18.0

[sub_resource type="Animation" id="Animation_y75y4"]
resource_name = "float"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -2), Vector2(0, 2), Vector2(0, -2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vrytt"]
_data = {
"float": SubResource("Animation_y75y4")
}

[node name="Sign" type="StaticBody2D"]
z_index = 1
collision_layer = 0
script = ExtResource("1_513hb")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_22nhh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_nrn8e")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_7cbp0")

[node name="InteractionLabel" type="Node2D" parent="."]
position = Vector2(0, -2)
scale = Vector2(0.1, 0.1)

[node name="HBoxContainer" type="HBoxContainer" parent="InteractionLabel"]
z_index = 2
offset_left = -510.0
offset_top = -190.0
offset_right = 510.0
offset_bottom = -90.0
size_flags_horizontal = 4
alignment = 1

[node name="Container" type="MarginContainer" parent="InteractionLabel/HBoxContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="InteractionLabel/HBoxContainer/Container"]
layout_mode = 2
color = Color(0, 0, 0, 0.498039)

[node name="MarginContainer" type="MarginContainer" parent="InteractionLabel/HBoxContainer/Container"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15

[node name="Label" type="Label" parent="InteractionLabel/HBoxContainer/Container/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ml03n")
theme_override_font_sizes/font_size = 58
text = "Sign Text"
vertical_alignment = 1

[node name="FloatAnimation" type="AnimationPlayer" parent="InteractionLabel"]
libraries = {
"": SubResource("AnimationLibrary_vrytt")
}
autoplay = "float"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
